Minor changes after upgrading to Billing v5+